--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									</a></h2>
 									<p>In this project we build an investment portfolio with different asset class and summarize the same on an interactive dashboard </p>
 								</header>
-								<a href="#" class="image main"><img src="images/Investments.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/InvestmentPort PIC.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/arihant-bhuyan/Investment-Portfolio" class="button large">View Project</a></li>
 								</ul>
@@ -64,13 +64,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/arihant-bhuyan/IBM-Capstone-Project/blob/main/IBM%20Capstone%20Project.ipynb">IBM Capstone Project<br />
+										<h2><a href="https://github.com/arihant-bhuyan/IBM-Capstone-Project">IBM Capstone Project<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/IBM Capstone.png" alt="" /></a>
 									<p>Data Collection | Data Wrangling | Exploratory Data Analysis | Data Visualisation</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/arihant-bhuyan/IBM-Capstone-Project/blob/main/IBM%20Capstone%20Project.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/arihant-bhuyan/IBM-Capstone-Project" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -78,11 +78,14 @@
 										<h2><a href="https://public.tableau.com/app/profile/arihant.bhuyan/viz/BAReviewAnalyticsProject/Dashboard1">Tableau - British Airways <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Tableau - BA.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Tableau BA PIC.png" alt="" /></a>
 									<p>Building an interactive dashboard summarizing British Airways reviews to gain insights, helping upper management with decision making.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/arihant.bhuyan/viz/BAReviewAnalyticsProject/Dashboard1" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/arihant.bhuyan/viz/BAReviewAnalyticsProject/Dashboard1" class="button">View DASHBOARD</a></li>
 									</ul>
+									<u2 class="actions special">
+										<li><a href="https://github.com/arihant-bhuyan/Tableau---British-Airways/blob/main/README.md" class="button">View ANALYSIS</a></li>
+									</u2>
 								</article>
 								<article>
 									<header>
