--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
+						<div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
 							<li><a href="https://www.linkedin.com/in/arihant-bhuyan-a5b2b9171/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/arihant-bhuyan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						</div>
 						</ul>
 					</nav>
 
