--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/Tableau BA PIC.png" alt="" /></a>
 									<p>Building an interactive dashboard summarizing British Airways reviews to gain insights, helping upper management with decision making.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/arihant.bhuyan/viz/BAReviewAnalyticsProject/Dashboard1" class="button">View DASHBOARD</a></li>
-									</ul>
-									<u2 class="actions special">
-										<li><a href="https://github.com/arihant-bhuyan/Tableau---British-Airways/blob/main/README.md" class="button">View ANALYSIS</a></li>
-									</u2>
+									
+									<!-- Corrected Section with Buttons Side by Side -->
+									<div style="display: flex; justify-content: center; gap: 10px; margin-top: 20px;">
+										<a href="https://public.tableau.com/app/profile/arihant.bhuyan/viz/BAReviewAnalyticsProject/Dashboard1" class="button">View DASHBOARD</a>
+										<a href="https://github.com/arihant-bhuyan/Tableau---British-Airways/blob/main/README.md" class="button">View ANALYSIS</a>
+									</div>
 								</article>
+								
 								<article>
 									<header>
 										<h2><a href="https://github.com/arihant-bhuyan/S-P-500-Stock-Market-Prediction">S&P 500 stock market prediction<br />
