--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Arihant's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/arihant-bhuyan/Investment-Portfolio">Investment Portfolio<br />
 									</a></h2>
-									<p>In this project we build an investment portfolio with different asset class and summarize the same on an interactive dashboard </p>
+									<p>Developed a comprehensive portfolio analysis across asset classes, using Python, SQL and Tableau for dynamic tracking and visualization of asset performance, allocation, and risk metrics </p>
 								</header>
 								<a href="#" class="image main"><img src="images/InvestmentPort PIC.png" alt="" /></a>
 								<ul class="actions special">
@@ -70,7 +70,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/IBM Capstone.png" alt="" /></a>
-									<p>Data Collection | Data Wrangling | Exploratory Data Analysis | Data Visualisation</p>
+									<p>Completed a full data analysis pipeline, leveraging Python for data extraction, pre-processing, wrangling, modelling and visualization. Delivered actionable insights by exploring job market trends, demand for skills, and salary insights.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/arihant-bhuyan/IBM-Capstone-Project" class="button">View Project</a></li>
 									</ul>
@@ -81,7 +81,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Tableau BA PIC.png" alt="" /></a>
-									<p>Building an interactive dashboard summarizing British Airways reviews to gain insights, helping upper management with decision making.</p>
+									<p>Built an interactive Tableau dashboard analyzing customer reviews, offering key insights into service quality, customer preferences, and improvement areas for British Airways.</p>
 									
 									<!-- Corrected Section with Buttons Side by Side -->
 									<div style="display: flex; justify-content: center; gap: 10px; margin-top: 20px;">
@@ -96,7 +96,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/sandp.png" alt="" /></a>
-									<p>S&P 500 stock market prediction using Linear Regression and LSTM Model</p>
+									<p>Designed predictive models using Linear Regression and LSTM to forecast S&P 500 trends. This project showcases advanced Python modelling and stock market analysis for financial forecasting</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/arihant-bhuyan/S-P-500-Stock-Market-Prediction" class="button">View Project</a></li>
 									</ul>
