--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 									<p>Developed a comprehensive portfolio analysis across asset classes, using Python, SQL and Tableau for dynamic tracking and visualization of asset performance, allocation, and risk metrics </p>
 								</header>
 								<a href="#" class="image main"><img src="images/InvestmentPort PIC.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/arihant-bhuyan/Investment-Portfolio" class="button large">View Project</a></li>
-								</ul>
+								<!-- Corrected Section with Buttons Side by Side -->
+									<div style="display: flex; justify-content: center; gap: 10px; margin-top: 20px;">
+										<a href="https://public.tableau.com/app/profile/arihant.bhuyan/viz/InvestmentPortfolio-Project-Visualisation/MainDashBoard" class="button">View DASHBOARD</a>
+										<a href="https://github.com/arihant-bhuyan/Investment-Portfolio" class="button">View ANALYSIS</a>
+									</div>
 							</article>
 
 						<!-- Posts -->
