--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Arihant's<br />
 						Creation</h1>
-						<p> - Turning Raw Data into Actionable Intelligence <a href="www.linkedin.com/in/arihant-bhuyan-a5b2b9171">@ArihantBhuyan</a>.</p>
+						<p>Turning Raw Data into Actionable Intelligence <a href="https://www.linkedin.com/in/arihant-bhuyan-a5b2b9171/" target="_blank">@ArihantBhuyan</a></p>
 						<p>SQL | PYTHON | TABLEAU</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
