--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
 										<li><a href="https://github.com/arihant-bhuyan/S-P-500-Stock-Market-Prediction" class="button">View Project</a></li>
 									</ul>
 								</article>
+									<header>
+										<h2><a href="https://github.com/arihant-bhuyan/Online-Sales-Analysis">SQL - Online Sales Analysis<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/SQL logo.jpg" alt="" /></a>
+									<p>This project analyzes online sales data to provide insights into sales performance across various product categories, regions, and time periods. The analysis seeks to uncover trends in customer behavior, identify top-selling products, and evaluate the effectiveness of payment methods. The findings help optimize sales strategies</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/arihant-bhuyan/Online-Sales-Analysis" class="button">View Project</a></li>
+									</ul>
 								<article>
 								</article>
 							</section>
