--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 					</header>
 
 				<!-- Nav -->
+					<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="generic.html">Little About Me</a></li>
 						</ul>
 						<ul class="icons">
 						<div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;">
@@ -45,6 +47,7 @@
 						</div>
 						</ul>
 					</nav>
+					<nav>
 
 				<!-- Main -->
 					<div id="main">
