--- a/generic.html
+++ b/generic.html
@@ -51,11 +51,11 @@
                 <article class="post featured">
                     <header class="major">
                         <h2>Curriculum Vitae</h2>
-                        <a href="#" class="image main"><img src="images/CV.png" alt="CV Snapshot" /></a>
+                        <a href="https://github.com/arihant-bhuyan/testrepo/blob/main/Resume%20-%20Arihant%20Bhuyan.pdf" class="image main"><img src="images/CV.png" alt="CV Snapshot" /></a>
 
                         <p>Please take a look at my qualifications and experience. I believe they will give you a better understanding of my professional journey so far.</p>
                         <ul class="actions special">
-                            <li><a href="https://github.com/arihant-bhuyan/testrepo/blob/main/Resume%20-%20Arihant%20Bhuyan.pdf" class="button">View My Entire CV</a></li>
+                            <li><a href="https://github.com/arihant-bhuyan/Python-Projects" class="button">For more projects</a></li>
                         </ul>
                     </header>
                 </article>
