--- a/generic.html
+++ b/generic.html
@@ -53,9 +53,10 @@
                         <h2>Curriculum Vitae</h2>
                         <a href="https://github.com/arihant-bhuyan/testrepo/blob/main/Resume%20-%20Arihant%20Bhuyan.pdf" class="image main"><img src="images/CV.png" alt="CV Snapshot" /></a>
 
-                        <p>Please take a look at my qualifications and experience. I believe they will give you a better understanding of my professional journey so far.</p>
+                        <p>Please take a look at my qualifications and experience. I believe they will give you a better understanding of my professional journey so far. 
+			   (Please click on the image above for the entire CV)</p>
                         <ul class="actions special">
-                            <li><a href="https://github.com/arihant-bhuyan/Python-Projects" class="button">For more projects</a></li>
+                            <li><a href="https://github.com/arihant-bhuyan/Python-Projects" class="button">For more of my projects</a></li>
                         </ul>
                     </header>
                 </article>
