--- a/generic.html
+++ b/generic.html
@@ -51,7 +51,7 @@
                 <article class="post featured">
                     <header class="major">
                         <h2>Curriculum Vitae</h2>
-                        <a href="https://github.com/arihant-bhuyan/testrepo/blob/main/Resume%20-%20Arihant%20Bhuyan.pdf" class="image main"><img src="images/Resume_Arihant_Bhuyan.png" alt="CV Snapshot" /></a>
+                        <a href="https://github.com/arihant-bhuyan/testrepo/blob/main/Resume%20-%20Arihant%20Bhuyan.pdf" class="image main"><img src="images/Resume - Latest.png" alt="CV Snapshot" /></a>
 
                         <p>Please take a look at my qualifications and experience. I believe they will give you a better understanding of my professional journey so far. 
 			   (Please click on the image above for the entire CV)</p>
